--- a/src/main/resources/docgen/templates/msmarco-passage-unicoil-noexp.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-unicoil-noexp.template
@@ -35,11 +35,11 @@ The `run_regression.py` script automates the following steps, but if you want to
 Download the corpus and unpack into `collections/`:
 
 ```bash
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-passage-unicoil-noexp.tar -P collections/
-tar xvf collections/msmarco-passage-unicoil-noexp.tar -C collections/
+wget ${download_url} -P collections/
+tar xvf collections/${corpus}.tar -C collections/
 ```
 
-To confirm, `msmarco-passage-unicoil-noexp.tar` is 2.7 GB and has MD5 checksum `f17ddd8c7c00ff121c3c3b147d2e17d8`.
+To confirm, `${corpus}.tar` is 2.7 GB and has MD5 checksum `${download_checksum}`.
 With the corpus downloaded, the following command will perform the remaining steps below:
 
 ```bash
