--- a/src/main/resources/regression/dl20-passage-openai-ada2.yaml
+++ b/src/main/resources/regression/dl20-passage-openai-ada2.yaml
@@ -1,11 +1,11 @@
 ---
-corpus: msmarco-passage-openai-ada2-hyde
-corpus_path: collections/msmarco/msmarco-passage-openai-ada2-hyde/
+corpus: msmarco-passage-openai-ada2
+corpus_path: collections/msmarco/msmarco-passage-openai-ada2/
 
 download_url:
-download_checksum: 
+download_checksum:
 
-index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2-hyde/
+index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2/
 collection_class: JsonDenseVectorCollection
 generator_class: LuceneDenseVectorDocumentGenerator
 index_threads: 16
@@ -36,10 +36,10 @@ metrics:
 
 topic_reader: JsonIntVector
 topics:
-  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
-    id: dl19
-    path: topics path in anserini topics-and-qrels
-    qrel: qrels.dl19-passage.txt
+  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path:
+    qrel: qrels.dl20-passage.txt
 
 models:
   - name: openai-ada2
@@ -47,18 +47,18 @@ models:
     params: -querygenerator VectorQueryGenerator -topicfield vector -threads 16 -hits 1000 -efSearch 1000
     results:
       AP@1000:
-        - 0.479
+        - 0.477
       nDCG@10:
-        - 0.704
+        - 0.676
       R@1000:
-        - 0.863
+        - 0.871
   - name: openai-ada2-hyde
     display: HyDE-OpenAI-ada2
     params: -querygenerator VectorQueryGenerator -topicfield vector -threads 16 -hits 1000 -efSearch 1000
     results:
       AP@1000:
-        - 0.512
+        - 0.494
       nDCG@10:
-        - 0.716
+        - 0.667
       R@1000:
-        - 0.897
+        - 0.892
