--- a/src/main/resources/regression/msmarco-passage-openai-ada2.yaml
+++ b/src/main/resources/regression/msmarco-passage-openai-ada2.yaml
@@ -1,11 +1,11 @@
 ---
-corpus: msmarco-passage-openai-ada2-hyde
-corpus_path: collections/msmarco/msmarco-passage-openai-ada2-hyde/
+corpus: msmarco-passage-openai-ada2
+corpus_path: collections/msmarco/msmarco-passage-openai-ada2/
 
 download_url:
 download_checksum: 
 
-index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2-hyde/
+index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2/
 collection_class: JsonDenseVectorCollection
 generator_class: LuceneDenseVectorDocumentGenerator
 index_threads: 16
@@ -31,7 +31,7 @@ topic_reader: JsonIntVector
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
     id: dev
-    path: topics path in anserini topics-and-qrels
+    path: 
     qrel: qrels.msmarco-passage.dev-subset.txt
 
 models:
