--- a/src/main/resources/docgen/templates/backgroundlinking18.template
+++ b/src/main/resources/docgen/templates/backgroundlinking18.template
@@ -23,7 +23,7 @@ ${index_cmds}
 The directory `/path/to/core18/` should be the root directory of the [TREC Washington Post Corpus](https://trec.nist.gov/data/wapost/), i.e., `ls /path/to/core18/`
 should bring up a single JSON file.
 
-For additional details, see explanation of [common indexing options](common-indexing-options.md).
+For additional details, see explanation of [common indexing options](${root_path}/docs/common-indexing-options.md).
 
 ## Retrieval
 
