--- a/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
@@ -17,7 +17,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the MS MARCO Passage Corpus that has already been encoded with cosDPR-distil.
+We make available a version of the MS MARCO Passage Corpus that has already been encoded with the OpenAI-ada2 embedding model.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
