--- a/src/main/resources/regression/ciral-v1.0-so.yaml
+++ b/src/main/resources/regression/ciral-v1.0-so.yaml
@@ -1,16 +1,16 @@
 ---
 corpus: ciral-somali
-corpus_path: collections/ciral/ciral-passages-swahili/
+corpus_path: collections/ciral/ciral-passages-somali/
 
-index_path: indexes/lucene-index.ciral-v1.0-sw/
+index_path: indexes/lucene-index.ciral-v1.0-so/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
+index_options: -storePositions -storeDocvectors -storeRaw -language so
 index_stats:
-  documents: 949013
-  documents (non-empty): 949013
-  total terms: 115140711
+  documents: 827552
+  documents (non-empty): 827552
+  total terms: 103736362
 
 metrics:
   - metric: nDCG@20
@@ -37,19 +37,19 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[CIRAL Swahili: Dev](https://huggingface.co/datasets/CIRAL/ciral)"
+  - name: "[CIRAL Somali: Dev](https://huggingface.co/datasets/CIRAL/ciral)"
     id: dev
-    path: topics.ciral-v1.0-sw-dev-native.tsv
-    qrel: qrels.ciral-v1.0-sw-dev.tsv
+    path: topics.ciral-v1.0-so-dev-native.tsv
+    qrel: qrels.ciral-v1.0-so-dev.tsv
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 1000 -pretokenized
+    params: -bm25 -hits 1000 -language so
     results:
       nDCG@20:
-        - 0.1812
+        - 0.1500
       MRR@10:
-        - 0.1681
+        - 0.4000
       R@100:
-        - 0.4742
+        - 0.1850
