--- a/src/main/resources/regression/ciral-v1.0-sw.yaml
+++ b/src/main/resources/regression/ciral-v1.0-sw.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: ciral-hausa
-corpus_path: collections/ciral/ciral-passages-hausa/
+corpus: ciral-somali
+corpus_path: collections/ciral/ciral-passages-swahili/
 
-index_path: indexes/lucene-index.ciral-v1.0-ha/
+index_path: indexes/lucene-index.ciral-v1.0-sw/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
+index_options: -storePositions -storeDocvectors -storeRaw -language sw
 index_stats:
-  documents: 715355
-  documents (non-empty): 715355
-  total terms: 93696543
+  documents: 949013
+  documents (non-empty): 949013
+  total terms: 115140711
 
 metrics:
   - metric: nDCG@20
@@ -37,19 +37,19 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[CIRAL Hausa: Dev](https://huggingface.co/datasets/CIRAL/ciral)"
+  - name: "[CIRAL Swahili: Dev](https://huggingface.co/datasets/CIRAL/ciral)"
     id: dev
-    path: topics.ciral-v1.0-ha-dev-native.tsv
-    qrel: qrels.ciral-v1.0-ha-dev.tsv
+    path: topics.ciral-v1.0-sw-dev-native.tsv
+    qrel: qrels.ciral-v1.0-sw-dev.tsv
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 1000 -pretokenized
+    params: -bm25 -hits 1000 -language sw
     results:
       nDCG@20:
-        - 0.2039
+        - 0.1812
       MRR@10:
-        - 0.3153
+        - 0.1681
       R@100:
-        - 0.2760
+        - 0.4742
