--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <argLine>-Xmx8192m</argLine>
+          <argLine>@{argLine} -Xmx8192m</argLine>
         </configuration>
       </plugin>
       <plugin>
