Add test case for IndexHnswDenseVectors (#2254)
+ Add custom log appender to intercept and verify logging output
+ Clean up IndexInvertedDenseVectors
+ Fix code coverage (wasn't running properly before)
+ Other light clean-up

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <argLine>-Xmx8192m</argLine>
+          <!-- Need to add @{argLine} for JaCoCo to work; see https://stackoverflow.com/questions/71568474/getting-skipping-jacoco-execution-due-to-missing-execution-data-file-with-jaco -->
+          <argLine>@{argLine} -Xmx8192m</argLine>
         </configuration>
       </plugin>
       <plugin>
