--- a/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-openai-ada2.template
@@ -56,8 +56,6 @@ The path `/path/to/${corpus}/` should point to the corpus downloaded above.
 
 Upon completion, we should have an index with 8,841,823 documents.
 
-<!-- For additional details, see explanation of [common indexing options](${root_path}/docs/common-indexing-options.md). -->
-
 ## Retrieval
 
 Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
@@ -82,7 +80,7 @@ With the above commands, you should be able to reproduce the following results:
 ${effectiveness}
 
 Note that due to the non-deterministic nature of HNSW indexing, results may differ slightly between each experimental run.
-Nevertheless, scores are generally stable to the third digit after the decimal point.
+Nevertheless, scores are generally within 0.005 of the reference values recorded in [our YAML configuration file](${yaml}).
 
 ## Reproduction Log[*](${root_path}/docs/reproducibility.md)
 
