--- a/src/main/resources/regression/dl19-passage-cos-dpr-distil-hnsw-onnx.yaml
+++ b/src/main/resources/regression/dl19-passage-cos-dpr-distil-hnsw-onnx.yaml
@@ -51,7 +51,7 @@ topics:
 
 models:
   - name: cos-dpr-distil-hnsw
-    display: cosDPR-distil (HNSW)
+    display: cosDPR-distil
     type: hnsw
     params: -querygenerator VectorQueryGenerator -topicfield title -threads 16 -hits 1000 -efSearch 1000 -encoder CosDprDistil
     results:
