--- a/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
+++ b/src/main/resources/regression/dl19-passage-cos-dpr-distil-lexlsh.yaml
@@ -55,7 +55,7 @@ topics:
 
 models:
   - name: cos-dpr-distil-lexlsh-600
-    display: cosDPR-distill (LexLSH b=600)
+    display: cosDPR-distill
     type: inverted-dense
     params: -topicfield vector -encoding lexlsh -lexlsh.b 600 -hits 1000
     results:
