--- a/src/main/resources/regression/dl20-passage-openai-ada2.yaml
+++ b/src/main/resources/regression/dl20-passage-openai-ada2.yaml
@@ -6,6 +6,7 @@ download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco-passage-openai-a
 download_checksum: a4d843d522ff3a3af7edbee789a63402
 
 index_path: indexes/lucene-hnsw.msmarco-passage-openai-ada2/
+index_type: hnsw
 collection_class: JsonDenseVectorCollection
 generator_class: LuceneDenseVectorDocumentGenerator
 index_threads: 16
@@ -51,6 +52,7 @@ topics:
 models:
   - name: openai-ada2
     display: OpenAI-ada2
+    type: hnsw
     params: -querygenerator VectorQueryGenerator -topicfield vector -threads 16 -hits 1000 -efSearch 1000
     results:
       AP@1000:
