--- a/src/main/resources/regression/dl20-passage-cos-dpr-distil-lexlsh.yaml
+++ b/src/main/resources/regression/dl20-passage-cos-dpr-distil-lexlsh.yaml
@@ -50,7 +50,7 @@ topic_reader: JsonIntVector
 topics:
   - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
     id: dl20
-    path: topics.dl20.splade-pp-ed.tsv.gz
+    path: topics.dl20.cos-dpr-distil.jsonl.gz
     qrel: qrels.dl20-passage.txt
 
 models:
